--- a/ENCDM_2014/Project.toml
+++ b/ENCDM_2014/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
